Fixed thumbnail opacity on mobile. Swapped cta colors.

--- a/frontend/src/components/home-page/ProjectThumbnail.module.scss
+++ b/frontend/src/components/home-page/ProjectThumbnail.module.scss
@@ -45,6 +45,7 @@
     &.project-thumbnail-focus {
       .thumb-bg {
         filter: blur(0);
+        opacity: 1;
       }
 
       .vignette {
